<resources>
    <string name="action_clearmap">Clear Map</string>
    <string name="action_logout">Logout</string>
    <string name="pref_file_key" translatable="false">com.shivaraj.friendz.PREFERENCE_FILE_KEY</string>
    <string name="pref_theme">PresetTheme</string>
    <string name="pref_theme_no_action_bar" translatable="false">PresetThemeNoAb</string>
    <string name="logout_prompt_message">Are you sure you want to log out?</string>
    <string name="yes">YES</string>
    <string name="no">NO</string>
    <string name="pref_cat_user_account">User Account</string>
    <string name="pref_warning">NOTE: Do NOT use your main account for this application!
        Instead, create and use a fake Pokémon Trainer Club account with a different password and email.</string>
    <string name="pref_username">Set Username</string>
    <string name="pref_username_key" translatable="false">UsernameKey</string>
    <string name="pref_default_username">John Doe</string>
    <string name="pref_password">Set Password</string>
    <string name="pref_password_key" translatable="false">PasswordKey</string>
    <string name="pref_default_password" translatable="false">***</string>
    <string name="pref_cat_general">General</string>
    <string name="pref_pokestops_title">Show Pokéstops</string>
    <string name="pref_pokestops_key" translatable="false">pokestops_checkbox</string>
    <string name="pref_gyms_title">Show Gyms</string>
    <string name="pref_gyms_key" translatable="false">gyms_checkbox</string>
    <string name="pref_scanned_title">Show Scanned Locations</string>
    <string name="pref_scanned_key" translatable="false">scanned_checkbox</string>
    <string name="pref_pokemons_to_show_key" translatable="false">pokemons_to_show</string>
    <string name="pref_search_steps">Search steps</string>
    <string name="pref_search_steps_key" translatable="false">search_steps</string>
    <string name="pref_search_steps_service">Background service search steps</string>
    <string name="pref_search_steps_service_key" translatable="false">service_search_steps</string>
    <string name="pre_lured_key" translatable="false">lured_checkbox</string>
    <string name="pref_lured_title">Show Lured Pokémon</string>
    <string name="pokestop" translatable="false">Pokéstop</string>
    <string name="pref_cat_service">Background Service</string>
    <string name="pref_service_enable_title">Enable</string>
    <string name="pref_service_enable_key" translatable="false">background_poke_service</string>
    <string name="pref_service_refresh_title">Refresh Rate</string>
    <string name="pref_service_refresh_summary">How often the service will update in seconds.</string>
    <string name="pref_service_refresh_key" translatable="false">service_refresh_rate</string>
    <string name="pref_cat_other">Other</string>
    <string name="pref_theme_button">Theme</string>
    <string name="pref_theme_button_key" translatable="false">ThemeKey</string>
    <string name="toast_credentials">Can\'t login. Please check your credentials</string>
    <string name="title_activity_poke_map">Pokémon Nearby</string>
    <string name="login_warning"><Data><![CDATA[
    As using this app could result in your account being <b>banned</b> it is recommended to use a Google account not attached to your Pokémon Go account.
    Instead create and use a fake Pokémon Trainer Club (PTC) account with a different password and email.
    ]]></Data></string>
    <string name="prompt_username">PTC Username</string>
    <string name="prompt_password">PTC Password</string>
    <string name="action_sign_in">Sign in</string>
    <string name="error_field_required">Field Required</string>
    <string name="title_activity_maps">Map</string>
    <string name="login_warning_title">Warning:</string>
    <string name="request_credentials_title">Insert your Pokémon Go credentials</string>
    <string name="search_pokemon_map_suggestion">(Long press on map to change searching location)</string>
    <string name="default_string">Default</string>
    <string name="pokemon_to_show">Pokémon to show (filter)</string>
    <string name="action_relogin">Relogin</string>
    <string name="ban">banned</string>
    <string name="minutes">"minutes"</string>
    <string name="pokemon_will_spawn">will spawn here, scan again in a while</string>
    <string name="pokemon_disappearing_in">"Disappearing in: "</string>
    <string name="pokemon_expired">Expired</string>
    <string name="position_picked">Position Picked</string>
    <string name="seconds">"s"</string>
    <string name="toast_localization_waiting">Waiting for Position&#8230;</string>
    <string name="toast_login_successful">Login successful.</string>
    <string name="toast_map_not_initialized">Problem Initializing Google Map</string>
    <string name="toast_server_unreachable">Unable to contact the Pokémon GO servers. The servers may be down.</string>
    <string name="toast_token_expired">The Login token has expired. Getting a new one.</string>
    <string name="toast_user_found">Found You!</string>
    <string name="toast_login_error">Failed to Login.</string>
    <string name="toast_internal_error">An internal error occurred. This might happen when you are offline or the servers are down.</string>
    <string name="toast_ptc_login_error">PTC login failed</string>
    <string name="toast_google_login_error">Google login failed</string>
    <string name="enable_location_permission_title">Enable Location Permission</string>
    <string name="enable_location_permission_message">Please enable location permission to use this application</string>
    <string name="toast_no_location">Failed to Find GPS Location</string>
    <string name="expiring_in">Expires in: %1$d:%2$02d</string>
    <string name="google_login_failed">Google login failed</string>
    <string name="permition_message">Please allow locations in order to use the app</string>
    <string name="allow">Allow</string>
    <string name="app_settings">App Settings</string>
    <string name="disclaimer">Disclaimer</string>
    <string name="toast_searching">Searching&#8230;</string>
    <string name="toast_pokemon_found_count">"Pokémon found"</string>
    <string name="pokemon_found_none">No new catchable Pokémon have been found.</string>
    <string name="pokemon_found_new">%1$d new catchable Pokémon found.</string>
    <string name="notification_service_title">Pokémap Service</string>
    <string name="notification_service_scanning">Wait %1$d s Before scan</string>
    <string name="notification_service_scanning_progress">Scanning %1$s %%</string>
    <string name="notification_service_stop">Stop Service</string>
    <string name="notification_service_launch_pokemon_go">Launch Pokémon GO</string>
    <string name="notification_service_pokemon_near">%1$d Pokémon nearby (%2$d s).</string>
    <string name="notification_service_pokemon_in_area">%1$d Pokémon in area (%2$d s):</string>
    <string name="meters">meters</string>
    <string name="gym">Gym</string>
    <string name="button_ok">Ok</string>
    <string name="notification_service_inbox_line">%1$s (%2$d min, %3$d m)</string>
    <string name="toast_still_searching">Searching&#8230; found %1$d Pokémon so far.</string>
    <string name="preset_themes_title">Preset Themes</string>
    <string name="theme_activity_text">Will make this selection look pretty in the future. Select a theme:</string>

    <string name="app_name">Poke Friendz</string>
    <string name="action_settings">Settings</string>
    <string name="menu_login">Log in</string>
    <string name="menu_logout">Log out</string>
    <string name="login_label">Log In</string>
    <string name="email_label">Email</string>
    <string name="password_label">Password</string>
    <string name="send_text">Send</string>
    <string name="lorem">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean nec condimentum ante, qisis consequat, orci lacus venenatis orci, ntum viv. Praesent eu odio id nulla lobortis a.</string>
    <string name="title_sign_in">Welcome</string>
    <string name="sign_up">Sign Up</string>
    <string name="hint_password">6 char\'s password </string>
    <string name="hint_email">email</string>
    <string name="sign_in">Sign In</string>
    <string name="location_enabled">Location Enabled Successfully</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_home">Home</string>
    <string name="nav_newpost">New Post</string>
    <string name="nav_chat">Chat</string>
    <string name="nav_changeloc">Change My Location</string>
    <string name="nav_shareapp">Share Pokemongo</string>
    <string name="nav_contactus">Contact us</string>
    <string name="text_empty_message">Please type something</string>
    <string name="pokemon_gallery">Pokemon HD Wallpapers</string>
    <string name="connent_lbl">Comment</string>
    <string name="share_lbl">Share</string>
    <string name="pokes_lbl">Poked</string>
    <string name="poke_lbl">Poke</string>
    <string name="nav_post_distance">Distance</string>
    <string name="select_distance_title">Select distance in Meters</string>
    <string name="signup_failed_err">Sign Up Failed</string>
    <string name="signin_link_msg">or SIGN IN here</string>
    <string name="link_signup_msg">or SIGN UP here</string>
    <string name="nav_map">Map</string>
    <string name="banner_ad_unit_id">ca-app-pub-2336406710717678/1313145949</string>
    <string name="newpost_msg_hint">I found a gym here, some one get come and get it here</string>
    <string name="newpost_title_hint">Title: Gym, Pokemon</string>
    <string name="no_posts_found">Nobody posted around you be first one to post</string>
    <string name="hours_ago">hours ago</string>
    <string name="title_activity_show_post_map">Map</string>
    <string name="post_view_map">View Map</string>
    <string name="nav_pokemon_map">Live Pokemon Map</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="today_lbl">Today</string>
    <string name="my_posts_lbl">My posts</string>
    <string name="all_posts_lbl">All Posts</string>
    <string name="signin_err"><![CDATA[Sorry, Please check email & password length is more than 6 charecters]]></string>
    <string name="empty_comment_err">Please write some comment then click send</string>
    <string name="title_activity_live_pokemon_go_map">Live Pokemon Map</string>
    <string name="authentication_lbl">Connecting.. (May take few minutes on slow connection)</string>
    <string name="google_login_moto">Congrats, Link your Google account and watch Pokemons Live now.</string>
    <string name="google_login_note">Note: Try not to use your pokemongo email, Niantic may block your account.</string>
    <string name="nav_post_map">Posts Map</string>


</resources>